--- a/solo12_interface/package.xml
+++ b/solo12_interface/package.xml
@@ -4,7 +4,7 @@
   <name>solo12_interface</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="cionix90@gmail.com">jacopo</maintainer>
+  <maintainer email="cionix90@gmail.com">Jacopo Cioni</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
