--- a/solo12_sim/config/base_config.yaml
+++ b/solo12_sim/config/base_config.yaml
@@ -5,7 +5,7 @@ controller_manager:
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
     PD_control:
-      type: rbt_pd_cnt/Rbt_PD_cnt
+      type: rbt_pd_cnt/Real_PD_Cnt
 PD_control:
     ros__parameters:
       joint:
