--- a/solo12_interface/package.xml
+++ b/solo12_interface/package.xml
@@ -14,6 +14,7 @@
   <depend>hardware_interface</depend>
   <depend>pluginlib</depend>
   <depend>master_board_sdk</depend>
+  <depend>tf2</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
